l10n: Updating locales as strings replaced for those meeting pre-release criteria, excluding other locales for now. Trying it out for 0.5.5pre8.

--- a/ubiquity/chrome/locale/ca/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ca/coreubiquity.properties
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=Desa la vostra aparença
 ubiquity.skinsvc.installskin=Instal·la...
 ubiquity.skinsvc.newskinfound=Aquesta pàgina conté una aparença de l'Ubiquity. Si voleu instal·lar-la, cliqueu al botó de la dreta.
 ubiquity.skinsvc.skinchanged=S'ha canviat la vostra aparença!
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=Aquesta pàgina conté un estil d'usuari que l'Ubiquity pot executar. Si voleu subscriure-vos-hi, cliqueu al botó de la dreta.
 ubiquity.stylishfeedplug.subscriptionsuccess=Us heu subscrit a l'estil d'usuari amb èxit!
