--- a/ubiquity/chrome/locale/de/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/de/aboutubiquity.properties
@@ -39,7 +39,7 @@ ubiquity.showhidehelp.hide=Verstecke Hilfe
 # could read "Dein Modifikator muss einen SHIFT, CTRL, ALT oder META key inkludieren."
 
 ubiquity.prefkeys.notifybadmodifier=Du benötigst einen Modifikator wie SHIFT, CTRL, ALT oder META.
-ubiquity.prefkeys.clickhere=Klicke hier um die Tastenkombination zu ändern
+ubiquity.prefkeys.clickhere=Klicke hier um zu ändern
 ubiquity.prefkeys.confirmchange=Deine Taste wurde in %S geändert.
 # Key Combo Input for settings.xhtml (one-liner input focus)
 
@@ -51,17 +51,17 @@ ubiquity.prefkeys.pressyourcombo=Drücke deine Tastenkombination...
 # chrome://ubiquity/content/cmdlist.xhtml
 
 ubiquity.cmdlist.unsubscribefeed=deinstallieren
-ubiquity.cmdlist.feedupdated=Ein Update für das Kommando ist verfügbar.
+ubiquity.cmdlist.feedupdated=Ein Update für dieses Kommando ist verfügbar.
 ubiquity.cmdlist.viewsource=zeige Quelltext
-ubiquity.cmdlist.viewfeedsource=zeige auto-updated Quelltext 
+ubiquity.cmdlist.viewfeedsource=zeige auto-updated Quelltext
 ubiquity.cmdlist.localetemplate=zeige lokalisations Vorlage
 ubiquity.cmdlist.synonyms=auch genannt %S
 ubiquity.cmdlist.createdby=von %S
 ubiquity.cmdlist.license=lizensiert als %S
-ubiquity.cmdlist.contributions=beiträge von %S
+ubiquity.cmdlist.contributions=Mit Beiträge von %S
 ubiquity.cmdlist.homepage=homepage
 ubiquity.cmdlist.viewmoreinfo=mehr Informationen über %S
-ubiquity.cmdlist.oldparsertitle=Dieses Kommando konnte nicht geladen werden weil es inkompatibel mit Parser 2 ist.
+ubiquity.cmdlist.oldparsertitle=Dieses Kommando konnte nicht geladen werden, weil es mit Parser 2 nicht kompatibel ist.
 ubiquity.cmdlist.resubscribe=wieder installieren
 ubiquity.cmdlist.purge=entfernen
 ############################
