--- a/ubiquity/chrome/locale/de/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/de/aboutubiquitytutorial.properties
@@ -3,7 +3,7 @@
 tutorial.welcome=Willkommen beim Ubiquity Tutorial.
 tutorial.fromthestart=Klicke hier um zu beginnen
 tutorial.fromthemiddle=Starte von der Mitte:
-tutorial.howtostart=Wie man Ubiquity startet
+tutorial.howtostart=Ubiquity startet
 tutorial.previews=Vorschau (Wetter Kommandos)
 tutorial.abbreviations=Abkürzungen (Rechnen)
 tutorial.suggestions=Die Liste der Vorschläge (Google)
@@ -29,12 +29,12 @@ tutorial.stage03p2=(<strong>drücke die %S Taste und tippe auf die %S Taste</str
 tutorial.stage04p1=Gib jetzt das Wort <strong>wetter</strong> ein...
 ##### Stage 05
 
-tutorial.stage05p1=Bevor du das Wort ganz eingegeben hast, zeigt dir Ubiquity in dem <strong>Vorschau Bereich</strong> das Ergebniss an &#8212; in diesem Fall, einen Wetterbericht.
+tutorial.stage05p1=Bevor du das Wort ganz eingegeben hast, zeigt dir Ubiquity in dem <strong>Vorschau Bereich</strong> das Ergebniss an — in diesem Fall, einen Wetterbericht.
 tutorial.stage05p2=Wenn du keinen Standort eingibst, versucht das <em>wetter</em> Kommando zu raten wo du dich gerade befindest.
 tutorial.stage05p3=Gib jetzt einen Standort ein: <strong>drücke die Leertaste und danach 'nahe berlin'</strong>. (Insgesamt steht da: 'wetter nahe berlin'.)
 ##### Stage 06
 
-tutorial.stage06p1=Siehst du wie das funktioniert?  Lösche &quot;berlin&quot; und probiere ein paar andere Orte.
+tutorial.stage06p1=Siehst du wie das funktioniert?  Lösche "berlin" und probiere ein paar andere Orte.
 tutorial.stage06p2=Wenn du mit dem Wetterbericht fertig bist, <strong>drücke die Escape Taste.</strong>
 ##### Stage 07 (part 3 of 6) #####
 
