--- a/ubiquity/chrome/locale/fr/devubiquity.properties
+++ b/ubiquity/chrome/locale/fr/devubiquity.properties
@@ -1,10 +1,16 @@
 # This file is just a placeholder for localizations to dev tools
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=Désolé, mais il apparaît que vous n'utilisez pas Mac OS X. Cette fonctionnalité n'est pas encore disponible.
 ubiquity.quicklaunch.enabledefault=Activer le lancement rapide
 ubiquity.quicklaunch.enablerunning=Le lancement rapide est déjà activé.
 ubiquity.quicklaunch.enableconfirm=Le lancement rapide est maintenant activé.
 ubiquity.quicklaunch.erorr=Une erreur est survenue. Désolé !
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=terme d'appel :
 ubiquity.playpen.combo=combinaison :
 ubiquity.playpen.argstring=argString :
@@ -32,9 +38,19 @@ ubiquity.playpen.step9=étape 9-11 : complétion
 ubiquity.playpen.parsespossible=analyses possibles
 ubiquity.playpen.parsedverbs=analyse des verbes
 ubiquity.playpen.parsednouns=analyser en remplaçant les suggestions des noms et en les marquant
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=test
 ubiquity.testsuite.testplural=tests
 ubiquity.testsuite.runerror=Erreur lors de l'exécution des tests : %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
 ubiquity.tuner.ScoringGuess=En terme de supposition :
 ubiquity.tuner.Guess1=Discutable.
 ubiquity.tuner.Guess2=Possible.
