--- a/ubiquity/chrome/locale/ja/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ja/coreubiquity.properties
@@ -27,9 +27,15 @@ ubiquity.feedmanager.subscribe=インストール...
 ubiquity.msgservice.defaultmsgtitle=Ubiquity 通知
 #
 
+# /modules/skinsvc.js
+
 ubiquity.skinsvc.saveyourskin=カスタムスキンを保存
 ubiquity.skinsvc.installskin=インストール...
 ubiquity.skinsvc.newskinfound=このページには Ubiquity のスキンが表示されています。スキンをインストールするには右側のボタンをクリックしてください。
 ubiquity.skinsvc.skinchanged=スキンを変更しました。
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=このページには、Ubiquity で利用可能な Stylish 用のユーザスタイルが含まれています。インストールするには右のボタンをクリックしてください。
 ubiquity.stylishfeedplug.subscriptionsuccess=ユーザスタイルがインストールされました！
