--- a/ubiquity/chrome/locale/ja/devubiquity.properties
+++ b/ubiquity/chrome/locale/ja/devubiquity.properties
@@ -1,10 +1,16 @@
 # This file is just a placeholder for localizations to dev tools
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=申し訳ありませんが、この機能は OS X 以外では利用できません。
 ubiquity.quicklaunch.enabledefault=Desktop QuickLaunch を有効にする
 ubiquity.quicklaunch.enablerunning=Desktop QuickLaunch は有効です。
 ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch が有効になりました。
 ubiquity.quicklaunch.erorr=エ、エラーだと？！
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=caller:
 ubiquity.playpen.combo=combination:
 ubiquity.playpen.argstring=argString:
@@ -32,9 +38,19 @@ ubiquity.playpen.step9=ステップ 9～11: パース完了
 ubiquity.playpen.parsespossible=パース候補
 ubiquity.playpen.parsedverbs=動詞ありのパース
 ubiquity.playpen.parsednouns=名詞候補付きのパースとスコア
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=テスト
 ubiquity.testsuite.testplural=テスト
 ubiquity.testsuite.runerror=テスト実行中のエラー: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
 ubiquity.tuner.ScoringGuess=In terms of a guess:
 ubiquity.tuner.Guess1=Questionable.
 ubiquity.tuner.Guess2=Possible.
