--- a/ubiquity/chrome/locale/pt-BR/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquity.properties
@@ -40,7 +40,7 @@ ubiquity.showhidehelp.hide=Ocultar ajuda
 
 ubiquity.prefkeys.notifybadmodifier=Você deve configurar uma tecla modificadora como Shift, Ctrl, Alt ou Meta.
 ubiquity.prefkeys.clickhere=Clique aqui para alterar
-ubiquity.prefkeys.confirmchange=Sua tecla foi alterada para
+ubiquity.prefkeys.confirmchange=Sua tecla foi alterada para %S.
 ############################
 
 ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
@@ -50,8 +50,8 @@ ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
 
 # chrome://ubiquity/content/localization-template.xhtml
 
-ubiquity.cmdlist.unsubscribefeed=desisncrever
-ubiquity.cmdlist.feedupdated=Uma atualização está disponível neste repositório.
+ubiquity.cmdlist.unsubscribefeed=desinscrever
+ubiquity.cmdlist.feedupdated=Uma atualização deste repositório está disponível.
 ubiquity.cmdlist.viewsource=exibir código-fonte
 ubiquity.cmdlist.viewfeedsource=exibir
 ubiquity.cmdlist.localetemplate=obter modelo de localização
@@ -78,8 +78,8 @@ ubiquity.subscription.successheader=Inscrição concluída com sucesso!
 
 ############################
 
-ubiquity.settings.restartfirefox=Esta alteração terá efeito após você reiniciar o Firefox.
-ubiquity.settings.opennewwindows=Esta alteração terá efeito ao abrir novas janelas.
+ubiquity.settings.restartfirefox=Essa alteração terá efeito após você reiniciar o Firefox.
+ubiquity.settings.opennewwindows=Essa alteração terá efeito ao abrir novas janelas.
 ubiquity.settings.skinsaved=Seu tema foi salvo!
 ubiquity.settings.skinerror=Erro ao salvar o seu tema.
 ubiquity.settings.skinauthor=criado por %S
