--- a/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
@@ -11,13 +11,13 @@ tutorial.selecting=Selecionando, Executando (Traduzir, Mapa)
 tutorial.morecommands=Como obter ajuda e aprender novos comandos
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Tutorial Ubiquity, parte 1 de 6: Como iniciar o Ubiquity
+tutorial.stage01h1=Tutorial do Ubiquity, parte 1 de 6: Como iniciar o Ubiquity
 tutorial.stage01p1=Bem-vindo ao tutorial do Ubiquity.
 tutorial.stage01p2=Vamos começar. Para iniciar o Ubiquity, siga os seguinte passos agora:
 tutorial.stage01p3=Segure a tecla %S e então pressione a tecla %S.
 ##### Stage 02
 
-tutorial.stage02p1=Este é o <strong>campo de digitação</strong> do Ubiquity. Você pode digitar comandos aqui.
+tutorial.stage02p1=Este é o <strong>campo de digitação</strong> do Ubiquity. Você poderá digitar comandos aqui.
 tutorial.stage02p2=Caso você queira sair do Ubiquity sem digitar nenhum comando, <strong>pressione a tecla de escape (Esc)</strong>. Tente agora.
 ##### Stage 03 (part 2 of 6) #####
 
@@ -88,43 +88,43 @@ tutorial.stage17p3=(digite 'traduzir', ou somente 'tr').
 ##### Stage 18
 
 tutorial.stage18p1=Nesse momento, você poderá digitar as palavras que você deseja que o Ubiquity traduza. Mas como você poderá ver na visualização, o Ubiquity já estará traduzindo as palavras que você selecionou.
-tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
+tutorial.stage18p2=Em seguida, <strong>pressione a tecla Enter</strong> para executar o comando.
 ##### Stage 19
 
-tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
-tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
-tutorial.stage19p3=Click here to continue
+tutorial.stage19p1=Perceba que o texto em japonês que você selecionou foi <em>substituido</em> pela tradução. Isso ocorreu porque você executou o comando pressionando 'Enter'.
+tutorial.stage19p2=Cada comando faz algo diferente ao ser executado. Normalmente eles abrem uma nova página ou alteram algo na página visualizada.
+tutorial.stage19p3=Clique aqui para continuar
 ##### Stage 20
 
-tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word — like the one in the box below — and you'd like to look it up.
-tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
+tutorial.stage20p1=Vamos ver mais um exemplo. Digamos que você esteja navegando na web e dá de cara com uma palavra desconhecida — como a escrita na caixa abaixo — e você deseja saber o que ela significa.
+tutorial.stage20p2=Selecione a palavra na caixa abaixo e abra o Ubiquity.
 ##### Stage 21
 
-tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
+tutorial.stage21p1=Agora <strong>use o comando google</strong> (digite 'google' ou simplesmente 'goo').
 ##### Stage 22
 
-tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done — you can dismiss Ubiquity and go on your way.
-tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
-tutorial.stage22p3=It's up to you.
+tutorial.stage22p1=Agora a previsão do comando <em>google</em> diz o que você quer saber, e então você já pode fechar o Ubiquity e continuar o que estava fazendo.
+tutorial.stage22p2=Mas se você quiser mais informações, você poderá pressionar Enter para executar o comando <em>google</em>, que abrirá o resultado em uma nova página.
+tutorial.stage22p3=Você é quem decide.
 ##### Stage 23 (part 6 of 6) #####
 
-tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
-tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity — plus you can find more on the Web.
-tutorial.stage23p2=How will you find out what commands are available?
-tutorial.stage23p3=One way is by using the <em>help</em> command.
-tutorial.stage23p4=Summon Ubiquity...
+tutorial.stage23h1=Parte 6 de 6: Obtendo ajuda e Aprendendo novos comandos
+tutorial.stage23p1=Até agora você já aprendeu os comandos <em>tempo</em>, <em>calcular</em>, <em>google</em>, <em>traduzir</em> e <em>mapa</em>. É um bom começo, mas existem dezenas de comandos incluidos no Ubiquity — além dos que você poderá encontrar na web.
+tutorial.stage23p2=Como saber quais comandos estão disponíveis?
+tutorial.stage23p3=Uma forma fácil é usando o comando <em>ajuda</em>.
+tutorial.stage23p4=Abra o Ubiquity…
 ##### Stage 24
 
-tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
-tutorial.stage24p2=type 'help tab'.
+tutorial.stage24p1=Suponha que você queira saber se há algum comando para lidar manipular abas. Você pode usar o comando <em>ajuda</em> da seguinte maneira:
+tutorial.stage24p2=digite 'ajuda tab' (ou 'ajuda aba').
 ##### Stage 25
 
-tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
-tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
-tutorial.stage25p3=When you're done, <strong>tap escape</strong>.
+tutorial.stage25p1=Na lista de sugestões você verá todos os comandos que possuem 'aba' em seus nomes.
+tutorial.stage25p2=Use as teclas de setas para navegar entre as sugestões. A área de visualização exibirá informações sobre cada comando selecionado.
+tutorial.stage25p3=Quando estiver satisfeito, <strong>pressione a tecla de escape</strong>.
 ##### Stage 26
 
-tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
-tutorial.stage26p2=This is the end of the tutorial. Once you go to the command list page, you are on your own to experiment and learn new commands at your own pace.
-tutorial.stage26p3=Summon Ubiquity, type 'list', and tap the enter key to execute.
-tutorial.stage26p4=Good-bye!
+tutorial.stage26p1=Finalmente, há o comando <em>listar comando do ubiquity</em>. Esse comando o levará para uma página que exibirá todos os comandos instalados. Você poderá aprender diversos tipos de comandos úteis ao navegar pela lista de comandos!
+tutorial.stage26p2=Este é o fim do tutorial. Uma vez que você entrar na lista de comandos, você poderá experimentar novos comandos à medida em que dominar os que já aprendeu.
+tutorial.stage26p3=Abra o Ubiquity, digite 'lista' e pressione Enter para executar o comando.
+tutorial.stage26p4=Boa sorte!
