--- a/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
@@ -3,11 +3,13 @@ extensions.ubiquity@labs.mozilla.com.description=Uma extensão que permite o uso
 
 #
 
-ubiquity.cmdmanager.defaulthelp=Digite o nome de um comando e pressione enter para executá-lo, ou <strong>ajuda</strong> para assistência.
+ubiquity.cmdmanager.defaulthelp=Digite o nome de um comando e pressione Enter para executá-lo, ou <strong>ajuda</strong> para assistência.
 #
 
 #
 
+ubiquity.cmdutils.searchdescription=Procura seus termos em %S.
+ubiquity.cmdutils.searchcmd=Procura em %S <strong>%S</strong>
 ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 #
 
@@ -17,16 +19,23 @@ ubiquity.feedmanager.didyouknow=Você sabia que existe um comando Ubiquity para 
 ubiquity.feedmanager.showme=Mostre-me!
 ubiquity.feedmanager.dontremind=Não lembrar novamente sobre este site
 ubiquity.feedmanager.newcommandfound=Esta página contém comandos Ubiquity. Se você quiser adicioná-los, clique no botão à direita.
-ubiquity.feedmanager.subscribe=Increver-se…
+ubiquity.feedmanager.subscribe=Inscrever-se…
 #
 
 #
 
+ubiquity.msgservice.defaultmsgtitle=Notificação do Ubiquity
 #
 
 #
 
 ubiquity.skinsvc.saveyourskin=Salvar seu tema
 ubiquity.skinsvc.installskin=Instalar…
-ubiquity.skinsvc.newskinfound=Esta página contém um tema do Ubiquity. Se você quiser instalar ese tema, clique no botão à direita.
+ubiquity.skinsvc.newskinfound=Esta página contém um tema do Ubiquity. Se você quiser instalar esse tema, clique no botão à direita.
 ubiquity.skinsvc.skinchanged=Seu tema foi alterado!
+############################
+
+# /modules/stylish_feed_plugin.js
+
+ubiquity.stylishfeedplug.newuserstylefound=Esta página contém estilos que podem ser usados pelo Ubiquity. Caso você queira assiná-los, clique no botão à direita.
+ubiquity.stylishfeedplug.subscriptionsuccess=Estilos assinados com sucesso!
