--- a/ubiquity/chrome/locale/pt-BR/devubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/devubiquity.properties
@@ -1,2 +1,63 @@
 # This file is just a placeholder for localizations to dev tools
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
+ubiquity.quicklaunch.sorrymessage=Aparentemente você não está usando o Mac OS X. Infelizmente esse recurso ainda não está disponível para você.
+ubiquity.quicklaunch.enabledefault=Ativar Atalho da Área de Trabalho
+ubiquity.quicklaunch.enablerunning=O Atalho da Área de Trabalho já está ativado.
+ubiquity.quicklaunch.enableconfirm=O Atalho da Área de Trabalho foi ativado.
+ubiquity.quicklaunch.erorr=Eca, ocorreu um erro! Desculpe.
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
+ubiquity.playpen.caller=chamador:
+ubiquity.playpen.combo=combinação:
+ubiquity.playpen.argstring=argumento:
+ubiquity.playpen.score=acertos:
+ubiquity.playpen.multiplier=multiplicador:
+ubiquity.playpen.noscore=nenhum acerto
+ubiquity.playpen.null=nulo
+ubiquity.playpen.done=pronto
+ubiquity.playpen.duration=DURAÇÃO:
+ubiquity.playpen.average=MÉDIA:
+ubiquity.playpen.step=passo
+ubiquity.playpen.winner=vencedor
+ubiquity.playpen.role=papel:
+ubiquity.playpen.name=nome:
+ubiquity.playpen.nountype=noutype:
+ubiquity.playpen.step1=passo 1: separar palavras
+ubiquity.playpen.step2=passo 2: escolher possíveis verbos
+ubiquity.playpen.step3=passo 3: escolher possíveis clíticos (a ser implementado)
+ubiquity.playpen.step4=passo 4: agrupar argumentos
+ubiquity.playpen.step5=passo 5: substituição de anáforas
+ubiquity.playpen.step6=passo 6: substituir argumentos normalizados
+ubiquity.playpen.step7=passo 7: aplicar objetos a outros papéis para análises sem verbo
+ubiquity.playpen.step8=passo 8: sugerir verbos
+ubiquity.playpen.step9=passos 9 a 11: completar
+ubiquity.playpen.parsespossible=análises possíveis
+ubiquity.playpen.parsedverbs=análises com verbos
+ubiquity.playpen.parsednouns=análises com sugestões de substantivos obtidos e computados
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
+ubiquity.testsuite.testsingular=teste
+ubiquity.testsuite.testplural=testes
+ubiquity.testsuite.runerror=Erro ao executar a suite de testes: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
+ubiquity.tuner.ScoringGuess=Em termos de adivinhação:
+ubiquity.tuner.Guess1=Questionável.
+ubiquity.tuner.Guess2=Possível.
+ubiquity.tuner.Guess3=Provável.
+ubiquity.tuner.Guess4=Perfeito!
+ubiquity.tuner.ScoringMatch=Em termos de correspondência:
+ubiquity.tuner.Match1=Pobre.
+ubiquity.tuner.Match2=Regular.
+ubiquity.tuner.Match3=Bom.
+ubiquity.tuner.Match4=Exato!
