--- a/ubiquity/chrome/locale/pt-PT/devubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/devubiquity.properties
@@ -1,10 +1,16 @@
 #
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=Desculpe, mas parece que não está a usar o Mac OS X. Esta funcionalidade ainda não está disponível.
 ubiquity.quicklaunch.enabledefault=Activar Iniciação Rápida
 ubiquity.quicklaunch.enablerunning=A Iniciação Rápida já está activa.
 ubiquity.quicklaunch.enableconfirm=A Iniciação Rápida está agora activa.
 ubiquity.quicklaunch.erorr=Ocorreu um erro. Desculpe!
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=chamador:
 ubiquity.playpen.combo=combinação:
 ubiquity.playpen.argstring=argString:
@@ -32,9 +38,19 @@ ubiquity.playpen.step9=passo 9-11: conclusão
 ubiquity.playpen.parsespossible=análises possíveis
 ubiquity.playpen.parsedverbs=análises com verbos
 ubiquity.playpen.parsednouns=análises com sugestão de substantivo trocado, e pontuado
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=teste
 ubiquity.testsuite.testplural=testes
 ubiquity.testsuite.runerror=Erro ao excutar a suite de testes: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
 ubiquity.tuner.ScoringGuess=Em termos de um palpite:
 ubiquity.tuner.Guess1=Questionável.
 ubiquity.tuner.Guess2=Possível.
