--- a/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/coreubiquity.properties
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=Сохранить ваше оформление
 ubiquity.skinsvc.installskin=Установить...
 ubiquity.skinsvc.newskinfound=Эта страница содержит оформление для Ubiquity. Если вы хотите установить его, нажмите на кнопку справа.
 ubiquity.skinsvc.skinchanged=Тема оформления была изменена!
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=Эта страница содержит пользовательский стиль для Stylish, который Ubiquity может использовать. Если вы хотите на него подписаться, нажмите на кнопку справа.
 ubiquity.stylishfeedplug.subscriptionsuccess=Успешная подписка на пользовательский стиль!
