--- a/ubiquity/chrome/locale/ru-RU/devubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/devubiquity.properties
@@ -1,10 +1,16 @@
 #
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=Извините, но, судя по всему, вы не используется Mac OS X. Эта функция ещё не доступна.
 ubiquity.quicklaunch.enabledefault=Включить Быстрый запуск
 ubiquity.quicklaunch.enablerunning=Быстрый запуск уже включён.
 ubiquity.quicklaunch.enableconfirm=Быстрый запуск включён.
 ubiquity.quicklaunch.erorr=Произошла ошибка. Извините!
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=вызывающая процедура:
 ubiquity.playpen.combo=комбинация:
 ubiquity.playpen.argstring=аргументы:
@@ -32,9 +38,19 @@ ubiquity.playpen.step9=шаги 9-11: завершение
 ubiquity.playpen.parsespossible=возможные типы анализов
 ubiquity.playpen.parsedverbs=анализы с глаголами
 ubiquity.playpen.parsednouns=анализы с загруженными и оценёнными предположениями имен
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=тест
 ubiquity.testsuite.testplural=тесты
 ubiquity.testsuite.runerror=Ошибка при выполнении набора тестов: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
 ubiquity.tuner.ScoringGuess=В терминах гипотез:
 ubiquity.tuner.Guess1=Спорно.
 ubiquity.tuner.Guess2=Возможно.
