--- a/ubiquity/chrome/locale/zh-CN/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/zh-CN/aboutubiquity.dtd
@@ -27,12 +27,12 @@ Sincerely,
 <!ENTITY ubiquity.pagetitle.About "关于 &appTitle;">
 <!ENTITY ubiquity.pagetitle.Settings "&appTitle; 设置 &amp; 皮肤">
 <!ENTITY ubiquity.pagetitle.YourCommands "&appTitle; 命令">
-<!ENTITY ubiquity.pagetitle.LocalizeCmd "&appTitle; 命令 - 本地模板">
+<!ENTITY ubiquity.pagetitle.LocalizeCmd "&appTitle; 命令 - 本地化模板">
 <!ENTITY ubiquity.pagetitle.Support "&appTitle; 支持">
-<!ENTITY ubiquity.pagetitle.HackUbiquity "&appTitle; 编辑命令">
+<!ENTITY ubiquity.pagetitle.HackUbiquity "&appTitle; 命令编辑器">
 <!ENTITY ubiquity.pagetitle.ConfirmAddCommand "&appTitle; 命令是出自不受信任的来源">
 <!ENTITY ubiquity.pagetitle.ResetUbiquity "重置 &appTitle;">
-<!ENTITY ubiquity.pagetitle.bug19warning "&appTitle;， 我们 uh-oh!">
+<!ENTITY ubiquity.pagetitle.bug19warning "哇塞，&appTitle;">
 <!-- Page Titles for all documents in this DTD -->
 <!ENTITY ubiquity.tagline.About "不要在Web上冲浪。命令它。">
 <!ENTITY ubiquity.tagline.Settings "设置和皮肤">
@@ -62,7 +62,7 @@ Sincerely,
 <!ENTITY ubiqutiy.about.WhatIsParagraph2 "为你经常访问的网站创建快捷方式；它可以消除重复的动作，让你得到更多的工作时间，速度更快。">
 <!ENTITY ubiqutiy.about.WhatIsParagraph3 "&appTitle; 最酷的事情是任何人都可以编写一个命令并共享到全世界，在大致相同的方式 Web 本身可以让每个人都在撰写网页内容并共享信息到全世界。">
 <!ENTITY ubiqutiy.about.LearnHow "了解如何使用 &appTitle;">
-<!ENTITY ubiqutiy.about.TutorialButton "点击这里互动教程">
+<!ENTITY ubiqutiy.about.TutorialButton "点击这里打开互动式教程">
 <!ENTITY ubiqutiy.about.MoreOnUsingUbiquity "更多关于使用 &appTitle;">
 <!ENTITY ubiqutiy.about.UsingParagraph1 "在考虑此网页上的基本教程，你可以阅读 <a href='&link.extDocs;'>深入的文档页面</a> 了解更多。">
 <!ENTITY ubiqutiy.about.UsingParagraph2 "帮助订阅我们 <a href='&link.herdMain;'>群</a>。这会增加你的数据到 <a href='&link.herdDash;'>仪表盘</a> — 他是完全匿名的，并会帮助我们的 &appTitle; 更好，更安全。">
@@ -77,18 +77,18 @@ Sincerely,
 <!ENTITY ubiquity.settings.InvokingUbiquity "调用 &appTitle; 请按：">
 <!ENTITY ubiquity.settings.ChangeShortcut "按一下上面 <strong>改变</strong> 用于打开 &amp; 关闭 &appTitle; 的键盘快捷键。">
 <!ENTITY ubiquity.settings.LangSettings "语言设置">
-<!ENTITY ubiquity.settings.LangSettingsParagraph1 "解析器 2 是 &appTitle; 的试验性的下一代解析器，它不会兼容所有的命令。然而，它支持多种语言。">
-<!ENTITY ubiquity.settings.UseParser2 "使用解析器 2 （下一代的解析器）">
+<!ENTITY ubiquity.settings.LangSettingsParagraph1 "第二代解析器是 &appTitle; 的试验性的下一代解析器，它不会兼容所有的命令。然而，它支持多种语言。">
+<!ENTITY ubiquity.settings.UseParser2 "使用第二代解析器（下一代的解析器）">
 <!ENTITY ubiquity.settings.SelectLanguage "语言：">
 <!ENTITY ubiquity.settings.MiscSettings "其他设置">
-<!ENTITY ubiquity.settings.MaxSuggestions "最大的建议数量：">
-<!ENTITY ubiquity.settings.Parser2Context "解析器 2">
-<!ENTITY ubiquity.settings.Parser2Details "解析器 2 可以调用外部 Web 服务来找出你输入的是什么，并为您在资料的基础上提出您下一步行动的建议。这需要有大量 API，这正在取得成果，因此默认情况下禁用。">
-<!ENTITY ubiquity.settings.Parser2EnableExternal "在全部解析器 2 查询中启用外部调用">
+<!ENTITY ubiquity.settings.MaxSuggestions "最大的建议列表项目数量：">
+<!ENTITY ubiquity.settings.Parser2Context "第二代解析器">
+<!ENTITY ubiquity.settings.Parser2Details "第二代解析器可以调用外部 Web 服务来找出你输入的是什么，并为您在资料的基础上提出您下一步行动的建议。这需要有大量 API，这正在取得成果，因此默认情况下禁用。">
+<!ENTITY ubiquity.settings.Parser2EnableExternal "在全部第二代解析器查询中启用外部调用">
 <!ENTITY ubiquity.settings.NotificationWarning "如果您使用 Growl 为请确保它运行Windows。如果不是，您将不会受到任何通知。">
 <!ENTITY ubiquity.settings.NotificationLinuxNote "为了 <a href='&link.libNotify;'>libnotify 通知</a> 在 Linux 上工作，您首先需要安装 libnotify-bin 使用 Synaptic 软件包管理在 Ubuntu 或运行 <code>sudo aptitude install libnotify-bin</code> 或其等效 for 你的配置。">
 <!ENTITY ubiquity.settings.NotificationSettings "通知设置">
-<!ENTITY ubiquity.settings.NotificationParagraph1 "Ubiquity 广泛采用透明非模式通知。在 OS X，这是可以看到使用 Growl。在Windows上，它显示为 <a href='&link.snarl;'>Snarl</a> 通知， <a href='&link.growlWin;'>Growl for Windows</a> 通知或 &ldquo;toaster&rdquo; 通知在屏幕上的右下角。如果你有 <a href='&link.snarl;'>Snarl</a> 安装并运行，Ubiquity 将尝试自动检测并用它来发送通知。">
+<!ENTITY ubiquity.settings.NotificationParagraph1 "Ubiquity 广泛采用透明非模式通知。在 OS X，这是可以看到使用 Growl。在Windows上，它显示为 <a href='&link.snarl;'>Snarl</a> 通知， <a href='&link.growlWin;'>Growl for Windows</a> 通知或 “toaster” 通知在屏幕上的右下角。如果你有 <a href='&link.snarl;'>Snarl</a> 安装并运行，Ubiquity 将尝试自动检测并用它来发送通知。">
 <!ENTITY ubiquity.settings.NotificationEnable "启用通知服务">
 <!ENTITY ubiquity.settings.CustomSkin "自定义皮肤编辑器">
 <!ENTITY ubiquity.settings.SaveSkin "保存">
@@ -110,30 +110,30 @@ Sincerely,
 <!ENTITY ubiquity.commandlist.SortByDate "订阅日期">
 <!ENTITY ubiquity.commandlist.SortByEnabled "启用">
 <!ENTITY ubiquity.commandlist.SortByCommand "命令名称">
-<!ENTITY ubiquity.commandlist.UnsubscribedFeeds "退订收取点">
-<!ENTITY ubiquity.commandlist.GraveYardText "你过去是订阅这些。如果你想一会，点击 “[重新订阅]” 链接它。">
+<!ENTITY ubiquity.commandlist.UnsubscribedFeeds "已退订收取点">
+<!ENTITY ubiquity.commandlist.GraveYardText "你曾经订阅过这些收取点。如果你还想要重新订阅这些收取点，请点击 “[重新订阅]” 。">
 <!-- Commands chrome/content/cmdlist.xhtml -->
 <!ENTITY ubiquity.support.GetHelp "获取帮助">
 <!ENTITY ubiquity.support.GetHelpParagraph1 "因为 &appTitle; 的不寻常的性质在一个实验室试验，而使用它您可能遇到问题。有许多地方可以去帮助 &appTitle;。">
 <!ENTITY ubiquity.support.GetHelpParagraph2 "是一个社区驱动的支持网站。许多常见的问题已经有答案，如果你不能找到答案，您就可以开始一个新话题。">
 <!ENTITY ubiquity.support.GetHelpParagraph3 "是有益的讨论命令开发，用户界面，功能建议，和其他高级别的讨论。">
 <!ENTITY ubiquity.support.GetHelpParagraph4 "也有整个 &appTitle; 项目的信息，包括文件，教程，和 &appTitle; 旧版本的链接。">
-<!ENTITY ubiquity.support.ReportBugs "报告一个 Bug">
+<!ENTITY ubiquity.support.ReportBugs "反馈 Bug">
 <!ENTITY ubiquity.support.ReportBugsParagraph1 "我们正在努力工作自动报告 bug 服务，但目前你应该报告任何重现问题的方法在 Get Satisfaction 或通过 Google Group/Mailing List。请包含任何关于最好的重现问题的方法的信息。">
 <!ENTITY ubiquity.support.ResetUbiquity "重置 &appTitle;">
 <!ENTITY ubiquity.support.ResetUbiquityParagraph1 "如果 &appTitle; 变成完全没有反应，那么可能要进行重置，恢复 &appTitle; 其为 “默认设置” 然后才能再次使用它。要执行重置 <a href='&chrome.reset;'>点击这里</a> — 并请接受我们为给您带来了不便表示歉意！">
 <!-- Support chrome/content/support.xhtml -->
-<!ENTITY ubiquity.editor.CommandEditorHeader "&appTitle; 编辑命令">
+<!ENTITY ubiquity.editor.CommandEditorHeader "&appTitle; 命令编辑器">
 <!ENTITY ubiquity.editor.CommandEditorNewCommands "<strong>输入新命令</strong> 在这里的下面。您输入的将被自动保存，并在命令输入模式能够立即使用。">
 <!ENTITY ubiquity.editor.CommandEditorReadAuthTutorial "<strong>阅读 <a href='&link.cmdTutorial;'>命令创建教程</a></strong> 了解更多信息。对于内置的命令的例子， <a href='&file.FeedsIndex;'>看看这里</a>。">
 <!ENTITY ubiquity.editor.CommandEditorReadTheDocs "文档 <a href='&file.DevelDocs;'>命令 APIs</a>">
 <!ENTITY ubiquity.editor.CommandEditorGetInvolved "<strong>参与</strong>。了解如何能够访问 <a href='&link.wikiMain;'>&appTitle; Wiki</a>。">
-<!ENTITY ubiquity.editor.YourExternalEd "您的外部编辑器为">
-<!ENTITY ubiquity.editor.EditorCommandType "命令类型为">
-<!ENTITY ubiquity.editor.CmdTypeRegular "Regular">
-<!ENTITY ubiquity.editor.CmdTypeLocked "Locked-Down">
-<!ENTITY ubiquity.editor.RegularCommandDesc "<em>Regular</em> 收取点有充分的权限来对您的计算机做任何事。">
-<!ENTITY ubiquity.editor.LockedCommandDesc "<em>Locked-Down</em> 收取点是非常安全的，但没有太多的自由与您的电脑互动。欲了解更多信息，见 <a href='&link.lockedFeeds;'>Locked-Down 收取点教程</a>。">
+<!ENTITY ubiquity.editor.YourExternalEd "您的外部编辑器是">
+<!ENTITY ubiquity.editor.EditorCommandType "命令类型是">
+<!ENTITY ubiquity.editor.CmdTypeRegular "正常">
+<!ENTITY ubiquity.editor.CmdTypeLocked "已锁定">
+<!ENTITY ubiquity.editor.RegularCommandDesc "<em>正常</em> 收取点有充分的权限来对您的计算机做任何事。">
+<!ENTITY ubiquity.editor.LockedCommandDesc "<em>已锁定</em> 收取点是非常安全的，但没有太多的自由与您的电脑互动。欲了解更多信息，见 <a href='&link.lockedFeeds;'>已锁定 收取点教程</a>。">
 <!ENTITY ubiquity.editor.ImportTemplate "导入命令模板">
 <!ENTITY ubiquity.editor.LaunchExternalEd "启动外部编辑器">
 <!ENTITY ubiquity.editor.ShareCommand "共享">
@@ -162,17 +162,17 @@ Sincerely,
 <!ENTITY ubiquity.confirmsubscription.AutoUpdateParagraph1 "这意味着收取点将不断检查功能更新和自动推到您的计算机。如果选中此，请确保只有您信任的人能改变这个代码，它的服务器是被托管的。">
 <!ENTITY ubiquity.confirmsubscription.AutoUpdateParagraph2 "请注意，此收取点是使用不安全的协议，因此受 <a href='&link.mitmInfo;'>人为的中间人攻击</a>。请仅自动更新此收取点，如果你肯定你在做什么和因此造成的影响。">
 <!ENTITY ubiquity.confirmsubscription.SubConfirmationShortDesc "你现在订阅命令收取点并可以使用它的功能。">
-<!ENTITY ubiquity.confirmsubscription.SubConfirmationLongDesc "如果您想退订，您可以使用&ldquo;list&rdquo; &appTitle; 命令在任何时候到 <a href='&chrome.cmdlist;'>命令管理页面</a> 在这里您可以看到所有您订阅的命令，并取消任何不再需要的订阅。">
+<!ENTITY ubiquity.confirmsubscription.SubConfirmationLongDesc "如果您想退订，您可以使用“list” &appTitle; 命令在任何时候到 <a href='&chrome.cmdlist;'>命令管理页面</a> 在这里您可以看到所有您订阅的命令，并取消任何不再需要的订阅。">
 <!ENTITY ubiquity.confirmsubscription.SubConfirmationComplete "你现在可以关闭此窗口。">
 <!-- Command Subscription Warning chrome/content/confirm-add-command.xhtml -->
 <!ENTITY ubiquity.reset.Header "恢复 &appTitle; 到它的默认设置？">
 <!ENTITY ubiquity.reset.Paragraph1 "如果 &appTitle; 工作异常，您可能需要考虑重置为其原始 “出厂设置”。为此，请点击下面的按钮。为了完成这个操作，Firefox 之后将重新启动。">
 <!ENTITY ubiquity.reset.Paragraph2 "<strong>警告：</strong> 这样做将删除任何你所做的自定义 &appTitle;，包括但不限于：">
-<!ENTITY ubiquity.reset.Feeds "订阅收取点">
+<!ENTITY ubiquity.reset.Feeds "已订阅收取点">
 <!ENTITY ubiquity.reset.Skins "自定义皮肤">
 <!ENTITY ubiquity.reset.Code "编辑命令代码">
 <!ENTITY ubiquity.reset.NoReturn "<strong>记录：</strong> 一旦完成，此操作无法撤销。">
-<!ENTITY ubiquity.reset.ButtonExport "输出我当前的 &appTitle; 配置到新标签页">
+<!ENTITY ubiquity.reset.ButtonExport "导出我当前的 &appTitle; 配置到新标签页">
 <!ENTITY ubiquity.reset.ButtonReset "是的，我知道我在干什么。重置 &appTitle; 并重新启动 Firefox">
 <!-- Resetting Ubiquity chrome/content/reset.xhtml -->
 <!ENTITY ubiquity.localizecmd.ForTemplate "这是一个模版 <code>&feedKey;。后</code>">
