--- a/ubiquity/chrome/locale/zh-CN/coreubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/coreubiquity.properties
@@ -1,15 +1,15 @@
-extensions.ubiquity@labs.mozilla.com.description=一个扩展允许在 Firefox 里使用动态命令。
+extensions.ubiquity@labs.mozilla.com.description=在 Firefox 里使用动态命令。
 # This file is just a placeholder for localizations to core Ubiquity
 
 #
 
-ubiquity.cmdmanager.defaulthelp=键入命令的名称后按Enter执行，或使用 <strong>help</strong> 命令来获得帮助。
+ubiquity.cmdmanager.defaulthelp=键入命令的名称后按 Enter 执行，或输入 <strong>help</strong> 命令来获得帮助。
 #
 
 #
 
-ubiquity.cmdutils.searchdescription=在您的话中搜索 %S 。
-ubiquity.cmdutils.searchcmd=搜索 %S 在：<strong>%S</strong>
+ubiquity.cmdutils.searchdescription=用 %S 搜索你的字词。
+ubiquity.cmdutils.searchcmd=用 %S 搜索 <strong>%S</strong>
 ubiquity.cmdutils.bookmarkletexec=运行 <strong>%S</strong> 书签。
 #
 
@@ -18,7 +18,7 @@ ubiquity.cmdutils.bookmarkletexec=运行 <strong>%S</strong> 书签。
 ubiquity.feedmanager.didyouknow=您是否知道在此网站上有一个 Ubiquity 命令？
 ubiquity.feedmanager.showme=查看我！
 ubiquity.feedmanager.dontremind=对本网站不要再次提醒我
-ubiquity.feedmanager.newcommandfound=此页面包含 Ubiquity 命令。如果您想订阅它们，请按一下在右边的按钮。
+ubiquity.feedmanager.newcommandfound=此页面包含 Ubiquity 命令。如果您想订阅它们，请按一下右边的按钮。
 ubiquity.feedmanager.subscribe=订阅...
 #
 
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=保存您的皮肤
 ubiquity.skinsvc.installskin=安装...
 ubiquity.skinsvc.newskinfound=此页面包含一个 Ubiquity 皮肤。如果您想安装这个皮肤，请按一下在右边的按钮。
 ubiquity.skinsvc.skinchanged=您的皮肤已经改变！
-ubiquity.stylishfeedplug.newuserstylefound=此页面包含一个 Ubiquity 可运行的 Stylish userstyle。如果您想订阅它，请按一下在右边的按钮。
-ubiquity.stylishfeedplug.subscriptionsuccess=Userstyle 订阅成功！
+############################
+
+# /modules/stylish_feed_plugin.js
+
+ubiquity.stylishfeedplug.newuserstylefound=此页面包含一个适用于 Ubiquity 的 Stylish 用户样式。如果您想订阅它，请按一下右边的按钮。
+ubiquity.stylishfeedplug.subscriptionsuccess=用户样式订阅成功！
