--- a/ubiquity/chrome/locale/zh-CN/devubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/devubiquity.properties
@@ -1,12 +1,19 @@
 # This file is just a placeholder for localizations to dev tools
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=很抱歉，但似乎你不使用 OS X。此功能尚未推向市场。
 ubiquity.quicklaunch.enabledefault=启用桌面快速启动
 ubiquity.quicklaunch.enablerunning=桌面快速启动已启动。
 ubiquity.quicklaunch.enableconfirm=桌面快速启动现在已经启动。
 ubiquity.quicklaunch.erorr=应答，发生错误，对不起！
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=访问者：
 ubiquity.playpen.combo=组合：
+ubiquity.playpen.argstring=argString:
 ubiquity.playpen.score=得分：
 ubiquity.playpen.multiplier=乘法：
 ubiquity.playpen.noscore=没有评分
@@ -18,8 +25,10 @@ ubiquity.playpen.step=步骤
 ubiquity.playpen.winner=胜利者
 ubiquity.playpen.role=作用：
 ubiquity.playpen.name=名称：
+ubiquity.playpen.nountype=名词输入：
 ubiquity.playpen.step1=步骤 1：分词
 ubiquity.playpen.step2=步骤 2：选择可能动词
+ubiquity.playpen.step3=step 3: pick possible clitics (TODO)
 ubiquity.playpen.step4=步骤 4：分组到参数
 ubiquity.playpen.step5=步骤 5：参数替换
 ubiquity.playpen.step6=步骤 6：替换正常参数
@@ -28,13 +37,26 @@ ubiquity.playpen.step8=步骤 8：建议动词
 ubiquity.playpen.step9=步骤 9-11：完成
 ubiquity.playpen.parsespossible=可能解析
 ubiquity.playpen.parsedverbs=解析和动词
+ubiquity.playpen.parsednouns=parses with noun suggestions swapped in, and scored
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=测试
 ubiquity.testsuite.testplural=测试
 ubiquity.testsuite.runerror=运行测试组出错：%S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
+ubiquity.tuner.ScoringGuess=用话进行推测：
 ubiquity.tuner.Guess1=可疑。
 ubiquity.tuner.Guess2=可能的。
 ubiquity.tuner.Guess3=很可能的。
 ubiquity.tuner.Guess4=完美！
+ubiquity.tuner.ScoringMatch=用话进行匹配：
 ubiquity.tuner.Match1=差。
 ubiquity.tuner.Match2=可以。
 ubiquity.tuner.Match3=好。
