--- a/ubiquity/chrome/locale/ca/devubiquity.properties
+++ b/ubiquity/chrome/locale/ca/devubiquity.properties
@@ -1,10 +1,16 @@
 #
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=Ho sentim, però sembla que no feu servir el Mac OS X. Aquesta característica no està habilitada encara.
 ubiquity.quicklaunch.enabledefault=Habilita l'inici ràpid des de l'escriptori
 ubiquity.quicklaunch.enablerunning=L'inici ràpid des de l'escriptori ja està habilitat.
 ubiquity.quicklaunch.enableconfirm=L'inici ràpid des de l'escriptori està ara habilitat.
 ubiquity.quicklaunch.erorr=Ups, s'ha produït un error. Ho sentim!
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
 ubiquity.playpen.caller=crida:
 ubiquity.playpen.combo=combinació:
 ubiquity.playpen.argstring=cadena d'argument:
@@ -32,9 +38,19 @@ ubiquity.playpen.step9=pas 9-11: compleció
 ubiquity.playpen.parsespossible=possibles anàlisis
 ubiquity.playpen.parsedverbs=anàlisis amb verbs
 ubiquity.playpen.parsednouns=anàlisis amb suggeriments de noms inclosos, i amb puntuació
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=test
 ubiquity.testsuite.testplural=tests
 ubiquity.testsuite.runerror=S'ha produït un error executant el conjunt de test: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
 ubiquity.tuner.ScoringGuess=En termes d'una presumpció:
 ubiquity.tuner.Guess1=Qüestionable.
 ubiquity.tuner.Guess2=Possible.
