--- a/ubiquity/chrome/locale/fr/coreubiquity.properties
+++ b/ubiquity/chrome/locale/fr/coreubiquity.properties
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=Enregistrer votre thème
 ubiquity.skinsvc.installskin=Installer…
 ubiquity.skinsvc.newskinfound=Cette page contient un thème Ubiquity. Si vous souhaitez l'installer, merci de cliquer sur le bouton situé à droite.
 ubiquity.skinsvc.skinchanged=Votre thème a été modifié !
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=Cette page contient un style utilisateur (Userstyle) Stylish. Ubiquity peut l'interpréter. Si vous souhaitez vous y abonner, veuillez cliquer sur le bouton à droite.
 ubiquity.stylishfeedplug.subscriptionsuccess=Abonnement à ce style utilisateur (Userstyle) réussi !
