--- a/ubiquity/chrome/locale/nl/coreubiquity.properties
+++ b/ubiquity/chrome/locale/nl/coreubiquity.properties
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=Uw thema opslaan
 ubiquity.skinsvc.installskin=Installeren...
 ubiquity.skinsvc.newskinfound=Deze pagina bevat een Ubiquity thema. Als u dit thema wilt installeren klik dan op de rechtse knop.
 ubiquity.skinsvc.skinchanged=Uw thema is gewijzigd!
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=Deze pagina bevat een stijlblad die Ubiquity kan uitvoeren. Als u zich wilt inschrijven klik dan op de rechtse knop.
 ubiquity.stylishfeedplug.subscriptionsuccess=Succesvol ingeschreven op het stijlblad!
