--- a/ubiquity/chrome/locale/nl/devubiquity.properties
+++ b/ubiquity/chrome/locale/nl/devubiquity.properties
@@ -1,12 +1,21 @@
 #
 
+# chrome://ubiquity/content/desktop-quicklaunch.xhtml/js
+
 ubiquity.quicklaunch.sorrymessage=Sorry, maar het lijkt alsof u OS X niet gebruikt. Deze feature is nog niet beschikbaar.
+ubiquity.quicklaunch.enabledefault=Desktop Quicklaunch aanzetten
 ubiquity.quicklaunch.enablerunning=Desktop Quicklaunch is reeds ingeschakeld.
 ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch is nu ingeschakeld.
 ubiquity.quicklaunch.erorr=Auch, er trad een fout op. Sorry!
+############################
+
+# chrome://ubiquity/content/playpen.xhtml/js
+
+ubiquity.playpen.caller=oproeper:
 ubiquity.playpen.combo=combinatie:
 ubiquity.playpen.argstring=argString:
 ubiquity.playpen.score=score:
+ubiquity.playpen.multiplier=vermenigvuldiger:
 ubiquity.playpen.noscore=geen score
 ubiquity.playpen.null=null
 ubiquity.playpen.done=klaar
@@ -16,20 +25,38 @@ ubiquity.playpen.step=stap
 ubiquity.playpen.winner=winnaar
 ubiquity.playpen.role=rol:
 ubiquity.playpen.name=naam:
+ubiquity.playpen.nountype=naamwoordtype:
 ubiquity.playpen.step1=stap 1: woorden splitsen
 ubiquity.playpen.step2=stap 2: mogelijke werkwoorden kiezen
+ubiquity.playpen.step3=step 3: pick possible clitics (TODO)
 ubiquity.playpen.step4=stap 4: groepeer in argumenten
+ubiquity.playpen.step5=step 5: anaphora substitution
 ubiquity.playpen.step6=stap 6: vervang genormaliseerde argumenten
+ubiquity.playpen.step7=step 7: apply objects to other roles for parses with no verb
 ubiquity.playpen.step8=stap 8: gesuggereerde werkwoorden
 ubiquity.playpen.step9=stap 8-11: afmaken
 ubiquity.playpen.parsespossible=mogelijke parses
 ubiquity.playpen.parsedverbs=parses met werkwoorden
+ubiquity.playpen.parsednouns=parses with noun suggestions swapped in, and scored
+############################
+
+# chrome://ubiquity/content/test.xhtml
+
 ubiquity.testsuite.testsingular=test
 ubiquity.testsuite.testplural=testen
 ubiquity.testsuite.runerror=Fout tijdens draaien test suite: %S
+############################
+
+# chrome://ubiquity/content/tuner.xhtml/js
+
+# reserving these for use later, I has an idea. -L
+
+ubiquity.tuner.ScoringGuess=In termen van een gok:
+ubiquity.tuner.Guess1=Twijfelachtig.
 ubiquity.tuner.Guess2=Mogelijk.
 ubiquity.tuner.Guess3=Waarschijnlijk.
 ubiquity.tuner.Guess4=Perfect!
+ubiquity.tuner.ScoringMatch=In termen van een overeenkomst
 ubiquity.tuner.Match1=Slecht.
 ubiquity.tuner.Match2=Oké.
 ubiquity.tuner.Match3=Goed.
