--- a/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/coreubiquity.properties
@@ -33,5 +33,9 @@ ubiquity.skinsvc.saveyourskin=Guarde o seu tema
 ubiquity.skinsvc.installskin=Instalar...
 ubiquity.skinsvc.newskinfound=Esta página contem um tema do Ubiquity. Se deseja instalá-lo, carregue no botão à direita.
 ubiquity.skinsvc.skinchanged=O seu tema foi mudado!
+############################
+
+# /modules/stylish_feed_plugin.js
+
 ubiquity.stylishfeedplug.newuserstylefound=Esta página contem um estilo do Stylish para o Ubiquity. Se deseja subscrevê-lo, carregue no botão à direita.
 ubiquity.stylishfeedplug.subscriptionsuccess=Estilo subscrito com sucesso!
